--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 80%;
+    width: 80vw;
     height: 60px; /* default height */
     max-height: 60px;
     background-color: var(--main);
