--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
     --cub: cubic-bezier(.48,.15,.05,.6);
 }
 
+html
+{
+    overflow-x: hidden;
+}
+
 body
 {
     color: var(--main);
@@ -23,7 +28,9 @@ body
     flex-direction: column;
     min-height: 5000px;
     font-family: serif, sans-serif;
-    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .header
@@ -157,6 +164,9 @@ nav ul li a
         max-height: 10000px !important;
         overflow: hidden !important;
         align-items: normal;
+        margin-left: 0% !important;
+        margin-right: 0% !important;
+        width: 100% !important;
     }
     .logo
     {
@@ -444,7 +454,9 @@ nav ul li a
 .sec
 {
     height: 100vh;
+    width: 100vw;
     padding: 0px 10%;
+    overflow: hidden;
 }
 
 .home
