--- a/css/style.css
+++ b/css/style.css
@@ -417,17 +417,6 @@ nav ul li a
 @media (min-width: 952px) {
     .flip-card:hover {
         width: 720px;
-        animation: blur 1s forwards;
-    }
-
-    @keyframes blur {
-        from {
-            backdrop-filter: blur(10px);
-        }
-
-        to {
-            backdrop-filter: blur(20px);
-        }
     }
 
     .flip-card:hover .flip-card-inner {
@@ -615,7 +604,7 @@ nav ul li a
 .about
 {
     position: relative;
-    border-radius: 30% 50% 50% 30%;
+    border-radius: 10% 10% 10% 10%;
     background-color: var(--second);
     height: 200vh;
     display: flex;
@@ -715,6 +704,7 @@ nav ul li a
     transition: all 0.5s var(--cub);
     overflow: auto;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+    overflow-x: hidden;
 }
 
 .biodiv:hover
@@ -741,7 +731,7 @@ nav ul li a
 .ex
 {
     background-color: var(--second);
-    border-radius: 30% 0% 50% 0%;
+    border-radius: 10% 10% 10% 10%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -752,13 +742,12 @@ nav ul li a
 
 .ex span
 {
-    font-size: 4em;
+    font-size: 2em;
     color: var(--main);
     border-radius: 5px;
-    overflow: hidden;
     display: block;
     top: 10px;
-    position: absolute;
+    position: relative;
 }
 
 .exbg img
@@ -791,9 +780,7 @@ nav ul li a
 {
     width: 1120px;
     height: 375px;
-    background: linear-gradient(135deg, Orgba(255, 255, 255, 0.1), rgba(229, 255, 0, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    background-color: #ffffff;
     border-radius: 20px;
     border: var(--hov) 1px solid;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
@@ -802,28 +789,11 @@ nav ul li a
     align-items: center;
     flex-direction: row;
     transition: all 0.5s var(--cub);
-    animation: appear var(--cub);
-    animation-timeline: view();
-    animation-range: entry 0 cover 20%;
 }
 
 .explc:hover
 {
     box-shadow: 20px 19px 32px rgba(0, 0, 0, 0.37);
-}
-
-@keyframes appear
-{
-    0%
-    {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    100%
-    {
-        opacity: 1;
-        transform: translateX(0px);
-    }
 }
 
 .explc_content
@@ -890,7 +860,7 @@ nav ul li a
 
 .edu
 {
-    border-radius: 0% 50% 00% 0%;
+    border-radius: 10% 10% 10% 10%;
     background-color: var(--second);
     display: flex;
     align-items: center;
@@ -957,9 +927,7 @@ nav ul li a
 }
 
 .flip-card-front {
-    background: linear-gradient(135deg, Orgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    background-color: #ffffff;
     border-radius: 20px;
     color: black;
     border-radius: 20px;
@@ -991,9 +959,7 @@ nav ul li a
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(135deg, Orgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    background-color: #ffffff;
 }
 
 .back-img img {
@@ -1024,11 +990,10 @@ nav ul li a
 .showcer a {
     font-size: 1.7vw;
     position: relative;
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
     transition: all 0.5s;
-    backdrop-filter: blur(8px);
-    background-color: rgba(6, 6, 6, 0.8);
+    background-color: #ffffff;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.09);
     border-radius: 10px;
     padding: 7px;
@@ -1037,8 +1002,7 @@ nav ul li a
 }
 
 .showcer a:hover {
-    backdrop-filter: blur(8px);
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #ffffff;
     box-shadow: 0 8px 32px rgba(255, 255, 255, 0.37);
     color: #000000;
 }
@@ -1087,6 +1051,7 @@ footer {
     flex-wrap: nowrap;
     padding: 5% 10%;
     height: auto;
+    border-radius: 10% 10% 10% 10%;
 }
 
 .explc_content p
